--- a/src/pages/Main/Main.module.css
+++ b/src/pages/Main/Main.module.css
@@ -40,7 +40,7 @@
   text-align: center;
   color: #090909;
   font-size: 32px;
-  font-weight: bold;
+  font-weight: normal;
   transition: 0.3s;
   text-transform: uppercase;
 }
