--- a/src/components/PodMain/PodMain.module.css
+++ b/src/components/PodMain/PodMain.module.css
@@ -1,7 +1,7 @@
 .title {
   width: 100%;
-  padding: 5px 20px 5px 30px;
-  margin-left: -10px;
+  padding: 20px 0 20px 50px;
+  /* margin-left: -10px; */
   border-top-right-radius: 18px;
   border-bottom-right-radius: 18px;
   background: var(--title-bg-color);
@@ -16,7 +16,8 @@
   text-transform: uppercase;
   font-size: 21px;
   color: #151515;
-  font-weight: normal;
+  font-weight: bold;
+  font-family: 'Calibri';
 }
 
 .column {
@@ -35,6 +36,13 @@
   border-radius: 0 0 40px 40px;
   box-shadow: 0 4px 8px 2px rgba(0, 0, 0, 0.2),
     0 6px 20px 2px rgba(0, 0, 0, 0.19);
+}
+
+.slideCont {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
 .slide {
@@ -99,7 +107,7 @@
 .tabButton {
   flex: 1;
   border: 3px solid #000;
-  padding: 2px 30px;
+  padding: 5px 30px;
   border-radius: 93px;
   cursor: pointer;
   color: #000;
@@ -110,7 +118,8 @@
 }
 
 .activeTab {
-  background: var(--title-bg-color);
+  background: var(--tabs-bg-color);
+  border: 3px solid var(--tabs-bg-color);
   color: #fff;
 }
 
@@ -122,11 +131,11 @@
 }
 
 .buttonDetail {
-  margin-top: -20px;
+  margin-top: -30px;
 
   border: none;
   color: #fff;
-  padding: 2px 30px;
+  padding: 9px 30px;
   border-radius: 93px;
   cursor: pointer;
   transition: background-color 0.3s ease;
